--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header {
 .navbar {
     background-color: #163035;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 20px 15%;
@@ -107,6 +108,7 @@ main a:hover {
 
 @media (max-width: 850px) {
     .hamburger {
+        margin-left: auto;
         display: flex;
         transition: 0.7s ease;
     }
@@ -132,9 +134,6 @@ main a:hover {
 
     .navlinks.active {
         display: flex;
-        position: fixed;
-        top: 88px;
-        left: 0;
         width: 100vw;
         flex-direction: column;
         justify-content: center;
