--- a/style.css
+++ b/style.css
@@ -107,6 +107,10 @@ main a:hover {
 }
 
 @media (max-width: 850px) {
+    html {
+        font-size: 8px;
+    }
+    
     .hamburger {
         margin-left: auto;
         display: flex;
